--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "mohdimran005.github.io"
+baseURL = "https://mohdimran005.github.io"
 languageCode = "en-us"
 theme = "resto-hugo"
 title = "Mamstr"
